# radiomeuh

./: .gitignore  CLAUDE.md  Makefile  README.md  kill.sh  pyproject.toml
.githooks/: pre-commit
scripts/: build_app.sh  kill.sh
src/radiomeuh/: __init__.py  cli.py  core.py  menubar.py
tests/: conftest.py  test_cli.py  test_core.py  test_menubar.py
